~/grok-4/index.html -> ~/mnp/index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <nav class="links">
         <a class="chip" href="https://github.com/ukb-pyro/fast-slow" target="_blank" rel="noopener">My Rug <span class="heart">❤️</span></a>
         <a class="chip" href="https://github.com/ukb-pyro/the-rug" target="_blank" rel="noopener">Personas</a>
-        <a class="chip" href="https://ukb-pyro.github.io/grok-4/" target="_blank" rel="noopener">Anime</a>
+        <a class="chip" href="https://ukb-pyro.github.io/mnp/" target="_blank" rel="noopener">Anime</a>
       </nav>
     </header>
 
